fix css z-index

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -231,7 +231,7 @@ nav {
 }
 
 .over-the-top {
-  z-index: 10000000;
+  z-index: 100;
 }
 
 .image-relative {
